<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.mss.encryptor.MainActivity"
    android:background="@color/black">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30pt"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Button
                android:text="@string/file_encrypt_button"
                android:id="@+id/file_encrypt_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:onClick="jumpToFileEncryption"
                android:drawableStart="@mipmap/ic_file"
                android:drawableLeft="@mipmap/ic_file"
                android:layout_weight=".5"/>
            <Button
                android:text="@string/text_encrypt_button"
                android:id="@+id/text_encrypt_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:onClick="jumpToTextEncryption"
                android:drawableStart="@mipmap/ic_text"
                android:drawableLeft="@mipmap/ic_text"
                android:layout_weight=".5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:text="@string/photo_take_encrypt_button"
                android:id="@+id/photo_encrypt_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:onClick="jumpToPhotoEncryption"
                android:drawableStart="@mipmap/ic_photo"
                android:drawableLeft="@mipmap/ic_photo"
                android:layout_weight=".5"/>
            <Button
                android:text="@string/video_take_encrypt_button"
                android:id="@+id/video_encrypt_button"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:onClick="jumpToVideoEncryption"
                android:drawableStart="@mipmap/ic_video"
                android:drawableLeft="@mipmap/ic_video"
                android:layout_weight=".5"/>
        </LinearLayout>


        <Button
            android:text="@string/list_encrypted_files"
            android:id="@+id/list_encrypted_files_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="jumpToDecryption"
            android:drawableStart="@mipmap/ic_list"
            android:drawableLeft="@mipmap/ic_list"/>

        <Button
            android:text="@string/preferences"
            android:id="@+id/prefs"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="jumpToPrefs"
            android:drawableStart="@mipmap/ic_prefs"
            android:drawableLeft="@mipmap/ic_prefs"/>

        <Button
            android:text="@string/about"
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="jumpToAbout"
            android:drawableStart="@mipmap/ic_about"
            android:drawableLeft="@mipmap/ic_about"/>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
