<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".encryption_activities.TextEncryptionActivity"
    tools:showIn="@layout/activity_text_encryption"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/enter_text_text_view"
        android:text="@string/enter_text_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/input_text_edit_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/enter_text_text_view"
        android:background="@drawable/encrypttextedit"/>

    <Button
        android:id="@+id/options_button_text"
        android:text="@string/text_encryption_options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_text_edit_view"
        android:onClick="expandContractOptionsText"/>

    <LinearLayout
        android:id="@+id/options_layout_text"
        android:layout_below="@id/options_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="vertical"
        android:background="@drawable/optionslayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/algorithm_spinner_text"
                android:layout_weight=".5"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/keylength_spinner_text"
                android:layout_weight=".5"/>
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Şifreleme anahtarı"/>


        <RadioGroup
            android:id="@+id/key_option_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giriş şifresi"
                android:id="@+id/radioButton"
                android:layout_weight=".3"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Son kullanılan şifre"
                android:id="@+id/radioButton2"
                android:layout_weight=".3"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yeni şifre"
                android:id="@+id/radioButton3"
                android:layout_weight=".3"/>
        </RadioGroup>

        <LinearLayout
            android:id="@+id/new_key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/new_key_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Yeni Şifre"
                android:inputType="textPassword"/>


        </LinearLayout>

        <EditText
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Şifre İpucu"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/new_filename_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Yeni Dosya İsmi"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <Button
        android:id="@+id/encrypt_text_button"
        android:text="@string/encrypt_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_layout_text"
        android:textStyle="bold"
        android:onClick="encryptText"/>

</LinearLayout>
